# sphinxcontrib-pydantic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: bot.yaml  examples.yaml  publish.yaml  pytest.yaml
examples/advanced/: pyproject.toml
examples/advanced/doc/: Makefile  conf.py  index.rst
examples/advanced/doc/api/: database.rst  generics.rst  index.rst  models.rst  settings.rst
examples/advanced/src/example_advanced/: __init__.py  generics.py  settings.py
examples/advanced/src/example_advanced/database/: __init__.py  dto.py  table.py
examples/advanced/src/example_advanced/models/: __init__.py  base.py  computed.py  config.py  validators.py
examples/autosummary/: pyproject.toml
examples/autosummary/doc/: api.rst  conf.py  index.rst  make.bat
examples/basic/: pyproject.toml
examples/basic/doc/: api.rst  conf.py  index.rst
src/sphinxcontrib/pydantic/: __init__.py  _compat.py  _config.py
tests/: conftest.py
tests/_commands/: test_main.py  test_sys_info.py
tests/assets/: __init__.py  conf.py  index.rst
tests/assets/models/: __init__.py  basic.py  computed.py  fields.py  forward_refs.py  generics.py  inheritance.py  nested.py  root_model.py  settings.py  sqlmodel_models.py  (+1 more)
tests/integration/: __init__.py  test_autodoc.py  test_build.py  test_extension.py  test_forward_refs.py  test_generics.py  test_inheritance.py  test_legacy_inventory.py  test_root_model.py  test_sqlmodel.py  test_xrefs.py
tests/unit/: test_compat.py
tests/utils/: test_checks.py  test_config.py  test_docs.py  test_logs.py
(+56 files in other folders)
