[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
name = 'example-advanced'
version = '0.1.0'
requires-python = '>=3.11'
dependencies = [
  'pydantic>=2.0',
  'pydantic-settings>=2.0',
  'sqlmodel>=0.0.16',
]

[tool.setuptools.packages.find]
where = ['src']
