[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 64.0.0']

[project]
dependencies = [
  'pydantic-settings>=2.0',
  'pydantic>=2.0',
  'sqlmodel>=0.0.16',
]
name = 'example-advanced'
requires-python = '>=3.11'
version = '0.1.0'

[tool.setuptools.packages.find]
where = ['src']
